--- a/pacote download/produtos/contato.html
+++ b/pacote download/produtos/contato.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            Produtos - Barbearia Alura
+            Contato - Barbearia Alura
         </title>
 
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
@@ -24,7 +24,11 @@
             </div>
         </header>
         
-        <main></main>
+        <main> 
+            
+            teste 2 teste
+
+        </main>
 
         <footer>
             <img src="logo-branco.png">
