--- a/pacote download/produtos/produtos.html
+++ b/pacote download/produtos/produtos.html
@@ -7,7 +7,7 @@
         </title>
 
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
