--- a/pacote download/produtos/contato.html
+++ b/pacote download/produtos/contato.html
@@ -26,8 +26,17 @@
         
         <main> 
             <form>
-                <imput type = "text"></imput>
-                
+                <label for="nomecompleto">Nome Completo:</label>
+                <input type = "text" id="nomecompleto"></imput>
+
+                <label for="email">E-mail:</label>
+                <input type="text" id="email">
+
+                <label for="telefone">Telefone:</label>
+                <input type="telefone" id="telefone">
+
+                <input type= "submit" value="Enviar Formulário">
+
 
             </form>
 
