--- a/pacote download/produtos/contato.html
+++ b/pacote download/produtos/contato.html
@@ -34,6 +34,26 @@
 
                 <label for="telefone">Telefone:</label>
                 <input type="telefone" id="telefone">
+                <label for="mensagem">Mensagem: </label>
+                <textarea cols="70" rows="10" id="mensagem"></textarea>
+                
+                <div>
+                    <P>Como prefere nosso contato?</P>
+
+                    <label for="radio-email">E-mail</label>
+                    <input type="radio" name="contato" value="email" id="radio-email">
+
+                    <label for="radio-telefone">Telefone</label>
+                    <input type="radio" name="contato" value="telefone" id="radio-telefone">
+
+                    <label for="radio-whatsapp">Whatsapp</label>
+                    <input type="radio" name="contato" value="Whatsapp" id="radio-whatsapp">
+                </div>
+
+                <label> <input type="checkbox"> Gostaria de receber nossas novidades por email?</label>
+
+
+
 
                 <input type= "submit" value="Enviar Formulário">
 
