--- a/pacote download/produtos/contato.html
+++ b/pacote download/produtos/contato.html
@@ -63,9 +63,7 @@
                 <label class="checkbox"><input type="checkbox" checked> Gostaria de receber nossas novidades por email?</label>
 
 
-
-
-                <input type= "submit" value="Enviar Formulário">
+                <input type= "submit" value="Enviar Formulário" class="enviar">
 
 
             </form>
